--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "url": "http://hawkins.github.io/"
   },
   "bin": {
-    "google": "./index.js"
+    "google": "./lib/index.js"
   },
   "files": [
-    "index.js"
+    "lib/index.js"
   ],
+  "scripts": {
+    "pretest": "npm run compile",
+    "prepublish": "npm run compile",
+    "compile": "cake build"
+  },
   "keywords": [
     "google",
     "cli",
@@ -26,8 +31,12 @@
     "implement"
   ],
   "dependencies": {
+    "chalk": "^1.1.3",
     "google": "^2.0.0",
     "open": "0.0.5",
     "prompt": "^1.0.0"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.10.0"
   }
 }
