--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "google": "^2.0.0",
-    "open": "0.0.5",
+    "opn": "^4.0.2",
     "prompt": "^1.0.0"
   },
   "devDependencies": {
